--- a/workloads/podinfo-dep.yaml
+++ b/workloads/podinfo-dep.yaml
@@ -55,6 +55,8 @@ spec:
           - --level=info
           - --random-delay=false
           - --random-error=false
+          - --ui-message='Welcome to Flux'
+          - 
         env:
           - name: PODINFO_UI_COLOR
             value: "#34577c"
